retrieveUnpackaged/objects/NCES_ID__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCES_ID__c</fullName>
        <label>NCES ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>NCES ID</label>
</CustomObject>